--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </form>
     <ul>
         <li>
-            <img src="./images/foto1.jpg" alt="Pintura de um gato"/>
+            <div class="red-cross">
+                <img src="./images/redcross.png" alt="Cruz para remover imagem"/>
+            </div>
+            <img class="imagem" src="./images/foto1.jpg" alt="Pintura de um gato"/>
             <div class="overlay-imagem-link">
                 <a href="./images/foto1.jpg" title="Ver imagem original" target="_blank">
                     Ver imagem original
@@ -32,7 +35,10 @@
         </li>
         
         <li>
-            <img src="./images/foto2.jpg" alt="Foto de um flamingo"/>
+            <div class="red-cross">
+                <img src="./images/redcross.png" alt="Cruz para remover imagem"/>
+            </div>
+            <img class="imagem" src="./images/foto2.jpg" alt="Foto de um flamingo"/>
             <div class="overlay-imagem-link">
                 <a href="./images/foto2.jpg" title="Ver imagem original" target="_blank">
                     Ver imagem original
@@ -41,7 +47,10 @@
         </li>
 
         <li>
-            <img src="./images/foto3.jpg" alt="Foto de dois filhotes de cachorro"/>
+            <div class="red-cross">
+                <img src="./images/redcross.png" alt="Cruz para remover imagem"/>
+            </div>
+            <img class="imagem" src="./images/foto3.jpg" alt="Foto de dois filhotes de cachorro"/>
             <div class="overlay-imagem-link">
                 <a href="./images/foto3.jpg" title="Ver imagem original" target="_blank">
                     Ver imagem original
